--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^5.4.1",
     "cli-progress": "^3.12.0",
     "twitter-downloader": "^1.1.8"
   }
