--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "twitter",
@@ -19,5 +19,8 @@
     "chalk": "^5.4.1",
     "cli-progress": "^3.12.0",
     "twitter-downloader": "^1.1.8"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
